--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -8,7 +8,8 @@
             <div class="header-content-inner">
                 <h1 id="homeHeading">The Place To Spark Ideas</h1>
                 <hr>
-                <p>Start Bootstrap can help you build better websites using the Bootstrap CSS framework! Just download your template and start going, no strings attached!</p>
+                <p>Aroorah is a platform where we cultivate innovative ideas and foster entrepreneurship! Starting something new could be as simple as joining our discussion here.</p>
+                <p>“I think if you do something and it turns out pretty good, then you should go do something else wonderful, not dwell on it for too long. Just figure out what’s next.” - Steve Jobs</p>
                 <a href="#about" class="btn btn-primary btn-xl page-scroll">Find Out More</a>
             </div>
         </div>
@@ -20,7 +21,7 @@
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <h2 class="section-heading">We've got what you need!</h2>
                     <hr class="light">
-                    <p class="text-faded">Start Bootstrap has everything you need to get your new website up and running in no time! All of the templates and themes on Start Bootstrap are open source, free to download, and easy to use. No strings attached!</p>
+                    <p class="text-faded">“I’m convinced that about half of what separates the successful entrepreneurs from the non-successful ones is pure perseverance. It is so hard. You put so much of your life into this thing. There are such rough moments in time that I think most people give up. I don’t blame them. It’s really tough and it consumes your life. If you’ve got a family and you’re in the early days of a company, I can’t imagine how one could do it. I’m sure it’s been done but it’s rough. It’s pretty much an 18-hour day job, seven days a week for a while. Unless you have a lot of passion about this, you’re not going to survive.” – Steve Jobs at Smithsonian Institution Oral History Interview, April 20, 1995</p>
                     <a href="#services" class="page-scroll btn btn-default btn-xl sr-button">Get Started!</a>
                 </div>
             </div>
@@ -41,29 +42,29 @@
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
                         <i class="fa fa-4x fa-diamond text-primary sr-icons"></i>
-                        <h3>Sturdy Templates</h3>
-                        <p class="text-muted">Our templates are updated regularly so they don't break.</p>
+                        <h3>Innovation</h3>
+                        <p class="text-muted">“Innovation distinguishes between a leader and a follower.”</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
                         <i class="fa fa-4x fa-paper-plane text-primary sr-icons"></i>
-                        <h3>Ready to Ship</h3>
-                        <p class="text-muted">You can use this theme as is, or you can make changes!</p>
+                        <h3>Fast Faced</h3>
+                        <p class="text-muted">New ideas coming out everyday! Changing here is constant.</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
                         <i class="fa fa-4x fa-newspaper-o text-primary sr-icons"></i>
-                        <h3>Up to Date</h3>
-                        <p class="text-muted">We update dependencies to keep things fresh.</p>
+                        <h3>Hot Topics</h3>
+                        <p class="text-muted">You can find the latest trendings in social-media here.</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
                         <i class="fa fa-4x fa-heart text-primary sr-icons"></i>
                         <h3>Made with Love</h3>
-                        <p class="text-muted">You have to make your websites with love these days!</p>
+                        <p class="text-muted">This platform is made with love!</p>
                     </div>
                 </div>
             </div>
@@ -170,8 +171,8 @@
     <aside class="bg-dark">
         <div class="container text-center">
             <div class="call-to-action">
-                <h2>Free Download at Start Bootstrap!</h2>
-                <a href="http://startbootstrap.com/template-overviews/creative/" class="btn btn-default btn-xl sr-button">Download Now!</a>
+                <h2>Free Registration at Aroorah!</h2>
+                <a href="/" class="btn btn-default btn-xl sr-button">Register Now!</a>
             </div>
         </div>
     </aside>
@@ -186,11 +187,11 @@
                 </div>
                 <div class="col-lg-4 col-lg-offset-2 text-center">
                     <i class="fa fa-phone fa-3x sr-contact"></i>
-                    <p>123-456-6789</p>
+                    <p>0000-000-000</p>
                 </div>
                 <div class="col-lg-4 text-center">
                     <i class="fa fa-envelope-o fa-3x sr-contact"></i>
-                    <p><a href="mailto:your-email@your-domain.com">feedback@startbootstrap.com</a></p>
+                    <p><a href="mailto:feedback@aroorah.com">feedback@aroorah.com</a></p>
                 </div>
             </div>
         </div>
