Added file structure.

--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -172,7 +172,7 @@
         <div class="container text-center">
             <div class="call-to-action">
                 <h2>Free Registration at Aroorah!</h2>
-                <a href="/" class="btn btn-default btn-xl sr-button">Register Now!</a>
+                <a href="{% url 'accounts:register' %}" class="btn btn-default btn-xl sr-button">Register Now!</a>
             </div>
         </div>
     </aside>
