1) Added header-content style to register page.  2) Move "Optional" from labels to placeholders in .

--- a/templates/accounts/register.html
+++ b/templates/accounts/register.html
@@ -5,6 +5,25 @@
 {% block title %}Register{% endblock %}
 
 {% block content %}
+<header>
+	<div class="header-content">
+	    <div class="header-content-inner">    
+	        <form action="" method="POST" accept-charset="utf-8">
+				<h2>Create a New Account</h2>
+				{% csrf_token %}
+				{{ form|crispy }}
+				<div class="btn-group btn-group-justified" role="group" aria-label="...">
+					<div class="btn-group" role="group">
+						<button type="submit" class="btn btn-lg btn-primary">Register</button>
+					</div>
+					<div class="btn-group" role="group">
+						<a href="{% url 'accounts:login' %}" class="btn btn-lg btn-info">Login</a>
+					</div>
+				</div>
+			</form>
+		</div>
+    </div>       
+</header>
 <section id="contact">
 	<div class="container col-sm-6 col-sm-offset-3 col-md-4 col-sm-offset-4">
 		<form action="" method="POST" accept-charset="utf-8">
