1) Added login/logout function in the navbar. 2) Added user profile function/views.

--- a/templates/base.html
+++ b/templates/base.html
@@ -63,6 +63,22 @@
                     <li>
                         <a class="page-scroll" href="/#contact">Contact</a>
                     </li>
+                    <!-- Check if user is authenticated. -->
+                    {% if user.is_authenticated %}
+                    <li>
+                        <a class="page-scroll" href="{% url 'accounts:profile' %}">Welcome, {{ user }}</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="{% url 'accounts:logout' %}">Logout</a>
+                    </li>
+                    {% else %}
+                    <li>
+                        <a class="page-scroll" href="{% url 'accounts:login' %}">Login</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="{% url 'accounts:register' %}">Register</a>
+                    </li>
+                    {% endif %}
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
