--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -5,19 +5,23 @@
 {% block title %}Login{% endblock %}
 
 {% block content %}
-<div class="container col-sm-6 col-sm-offset-3 col-md-4 col-sm-offset-4">
-    <form action="." method="POST" accept-charset="utf-8">
-        <h2>Please login</h2> {% csrf_token %} {{ form|crispy }}
-        <div class="btn-group btn-group-justified" role="group" aria-label="...">
-            <div class="btn-group" role="group">
-                <button type="submit" class="btn btn-lg btn-primary">Login</button>
-            </div>
-            <div class="btn-group" role="group">
-                <a href="{% url 'accounts:register' %}" class="btn btn-lg btn-info">Register</a>
-            </div>
-        </div>
-    </form>
-</div>
-
-
+<header>
+	<div class="header-content">
+		<div class="header-content-inner">
+			<div class="container col-sm-6 col-sm-offset-3 col-md-4 col-sm-offset-4">
+				<form action="" method="POST" accept-charset="utf-8">
+					<h2>Please login</h2> {% csrf_token %} {{ form|crispy }}
+					<div class="btn-group btn-group-justified" role="group" aria-label="...">
+						<div class="btn-group" role="group">
+							<button type="submit" class="btn btn-lg btn-primary">Login</button>
+						</div>
+						<div class="btn-group" role="group">
+							<a href="{% url 'accounts:register' %}" class="btn btn-lg btn-info">Register</a>
+						</div>
+					</div>
+				</form>
+			</div>
+		</div>
+	</div>
+</header>
 {% endblock %}
