--- a/templates/accounts/profile.html
+++ b/templates/accounts/profile.html
@@ -2,22 +2,22 @@
 {% load staticfiles %}
 {% load crispy_forms_tags %}
 
-{% block title %}Register{% endblock %}
+{% block title %}Profile{% endblock %}
 
 {% block content %}
 <header>
 	<div class="header-content">
 		<div class="header-content-inner">
 			<form action="" method="POST" accept-charset="utf-8">
-				<h2>Create a New Account</h2>
+				<h2>Your Registered Details</h2>
 				{% csrf_token %}
 				{{ form|crispy }}
 				<div class="btn-group btn-group-justified" role="group" aria-label="...">
 					<div class="btn-group" role="group">
-						<button type="submit" class="btn btn-lg btn-primary">Register</button>
+						<button type="submit" class="btn btn-lg btn-primary">Update</button>
 					</div>
 					<div class="btn-group" role="group">
-						<a href="{% url 'accounts:login' %}" class="btn btn-lg btn-info">Login</a>
+						<a href="{% url 'accounts:logout' %}" class="btn btn-lg btn-info">Logout</a>
 					</div>
 				</div>
 			</form>
